<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_perhitungan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/perhitungan_single_channel_nsingle_phase_model"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rata_rata_unit_yang_datang_per_satuan_waktu"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/arrival_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rata_rata_unit_yang_dilayani_per_satuan_waktu"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/service_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biaya_pelayanan_per_satuan_waktu_sc"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/service_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biaya_tunggu_per_satuan_waktu_wc"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/waiting_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banyaknya_anggota_kelompok_pelayanan_n"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/number_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"
            android:layout_marginBottom="35dp"/>
        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analisis" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/hasil_analisa"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>