<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">
    <LinearLayout
        android:background="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">
        <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_channel_single_phase_model"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="@string/penjelasan" />

        <Button
            android:id="@+id/rumus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="@string/rumus" />

        <Button
            android:id="@+id/hitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="@string/hitung" />

        <TextView
            android:layout_marginTop="100dp"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yuma_anugrah_virya_gunawan_n1808561059"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

    </LinearLayout>
</ScrollView>